--- a/index.html
+++ b/index.html
@@ -1,27 +1,54 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
-    />
-    <title>awesome-engineering</title>
-    <!-- Stylesheet -->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/@egoist/docup@1/dist/docup.min.css"
-    />
-  </head>
-  <body>
-    <!-- Script -->
-    <script src="https://unpkg.com/@egoist/docup@1/dist/docup.min.js"></script>
-    <!-- Start app -->
-    <script>
-      docup.init({
-        // ..options
-      })
-    </script>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculator</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Calculator</h1>
+
+        
+        <div class="calculator">
+        <input type="text" name="screen" id="screen">
+        <table>
+            <tr>
+                <td><button>(</button></td>
+                <td><button>)</button></td>
+                <td><button>CE</button></td>
+                <td><button>%</button></td>
+            </tr>
+            <tr>
+                <td><button>7</button></td>
+                <td><button>8</button></td>
+                <td><button>9</button></td>
+                <td><button>X</button></td>
+            </tr>
+            <tr>
+                <td><button>4</button></td>
+                <td><button>5</button></td>
+                <td><button>6</button></td>
+                <td><button>-</button></td>
+            </tr>
+            <tr>
+                <td><button>1</button></td>
+                <td><button>2</button></td>
+                <td><button>3</button></td>
+                <td><button>+</button></td>
+            </tr>
+            <tr>
+                <td><button>0</button></td>
+                <td><button>.</button></td>
+                <td><button>=</button></td>
+                <td><button>/</button></td>
+            </tr>
+        </table>
+    </div>
+    </div>
+
+</body>
+<script src="logic.js"></script>
 </html>
